# BAASIC

./: .gitignore  LICENSE  README.md  index.html  install.sh  package.json  pnpm-lock.yaml  vite.config.ts
packaging/: baasic-media-player.desktop
scripts/: generate-icons.sh
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: acquire.rs  db.rs  fingerprint.rs  lib.rs  main.rs  metadata.rs  models.rs  scanner.rs
src/components/: AcquirePanel.tsx  AlbumGrid.tsx  ImportPanel.tsx  PlayerBar.tsx  SettingsPanel.tsx  TrackList.tsx
src/hooks/: usePlayer.ts
src/lib/: api.ts
