[package]
name = "baasic-media-player"
version = "1.0.0"
description = "BAASIC Media Player — local music library with fingerprinting and deduplication"
authors = ["you"]
edition = "2021"

[lib]
name = "baasic_media_player_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
dirs = "6"
lofty = "0.22"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
urlencoding = "2"
rfd = "0.16"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
